objects/CB_SVC_Products_and_Problem_Codes__c.object
<CustomObject>
    <fields>
        <fullName>CTA_Level__c</fullName>
        <label>CTA Level</label>
        <picklist>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type_del__c</fullName>
        <label>Case Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2 - ETS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFS - Inventory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Products Categories and Problem Codes</relationshipLabel>
        <relationshipName>CB_SVC_Cases_Routing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Problem_Code__c</fullName>
        <label>Problem Code</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Star Reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Star Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Info Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Transition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action Plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Creative Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Existing Domain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Service Add-on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aliases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics/Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audience Tag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoShow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banner/Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Browser Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Browser rendering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buttons/CTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy/Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Problem_Details__c</fullName>
        <label>Problem Details</label>
        <picklist>
            <picklistValues>
                <fullName>301 Redirects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA Mgr Approved Call Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action Errors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Creative Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Edit/Remove Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Remove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Remove/Modify Toll-Free Numbers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Remove/Modify User/Password</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Remove/Update Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Remove Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Remove Mailbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Remove Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Remove Web-ids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Dealer Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Domain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Domain to Gryphon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Export Destination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adding a New Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adding a New Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adding New Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adding Target Audience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add New Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add New Rule</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party Implementations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Transition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdWizard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG - LMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac - LMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet - LMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco/Calabrio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compound Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create Ghost Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Lead Routing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Rep Man Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Family Sharing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Merchandising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Products Category and Problem Code</label>
    <nameField>
        <displayFormat>PC - {00000}</displayFormat>
        <label>Product Cat #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Categories and Problem Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>